fixed alignment, normalization and map to flow outputs issues

--- a/src/client/flogo/flow/task-configurator/task-configurator.component.less
+++ b/src/client/flogo/flow/task-configurator/task-configurator.component.less
@@ -124,7 +124,6 @@
 }
 
 .task-name {
-  margin-top: -5px;
   word-wrap: break-word;
   word-break: break-all;
   border: 1px solid transparent;;
